syntax = "proto3";

package volans.bridge.v1;

message Peer {
    string id = 1;
    repeated string addresses = 2;
}

message BridgeConnect {
    Peer peer = 1;
}

message BridgeRelayConnect {
    string src_peer_id = 1;
    string dst_peer_id = 2;
    string src_relayed_addr = 3;
}

enum BridgeCode {
    OK = 0; // 成功 HTTP 200
    CANCELLED = 1; // 操作被取消 HTTP 499
    UNKNOWN = 2; // 未知错误 HTTP 500
    INVALID_ARGUMENT = 3; // 无效的参数 HTTP 400
    DEADLINE_EXCEEDED = 4; // 超时 HTTP 504
    NOT_FOUND = 5; // 未找到 HTTP 404
    ALREADY_EXISTS = 6; // 已存在 HTTP 409
    PERMISSION_DENIED = 7; // 权限不足 HTTP 403
    UNAUTHENTICATED = 16; // 未认证 HTTP 401
    RESOURCE_EXHAUSTED = 8; // 资源耗尽 HTTP 429
    FAILED_PRECONDITION = 9; // 前置条件失败 HTTP 412
    ABORTED = 10; // 操作被中止 HTTP 409
    OUT_OF_RANGE = 11; // 超出范围 HTTP 416
    UNIMPLEMENTED = 12; // 未实现 HTTP 501
    INTERNAL = 13; // 内部错误 HTTP 500
    UNAVAILABLE = 14; // 服务不可用 HTTP 503
    DATA_LOSS = 15; // 数据丢失 HTTP 500
}

message BridgeStatus {
    BridgeCode code = 1;
}
